Fix increase pagination
